# agent-runtime-kit

./: .gitignore  README.md  pyproject.toml
configs/: agent_runtime_kit.example.yaml
docs/: README.md  agent-context-compaction.md  claude-code-provider.md  home-model-overrides-and-run-leases.md  openai-agents-provider.md  pi-provider.md  provider-adapters.md  runtime-observation.md
scripts/tests/: real_codex_smoke.py
src/agent_runtime_kit/: __init__.py
src/agent_runtime_kit/agent/: __init__.py  context.py  homes.py  instructions.py  models.py  report_policy.py  service.py  skills.py  snapshots.py  store.py  store_utils.py  templates.py  trace.py
src/agent_runtime_kit/flow/: __init__.py  contexts.py  models.py  patterns.py  registry.py  rendering.py  scheduler.py  services.py  store.py
src/agent_runtime_kit/runtime/: __init__.py  contexts.py  mcp_tool_gateway.py  services.py
tests/fixtures/: openai_agents_mcp_server.py  pi_faux_mcp_provider.ts  pi_faux_provider.ts  pi_faux_slow_provider.ts  pi_mcp_http_server.py  pi_mcp_stdio_server.py  pi_rpc_fixture.py
tests/integration/agent/: fakes.py  provider_contract_harness.py  test_agent_service_fake_provider.py  test_claude_code_provider.py  test_codex_context_adapter.py  test_codex_provider_home_cache.py  test_codex_provider_per_run.py  test_codex_query_adapter.py  test_codex_runtime_adapter.py  test_openai_agents_provider.py  test_opencode_runtime_adapter.py  test_pi_query_artifacts.py  test_pi_runtime_adapter.py  test_provider_contract_harness.py  test_snapshots.py
tests/integration/flow/: test_agent_step_fake_agent_service.py  test_dispatch_callback_pattern_integration.py  test_dispatch_step_flow_service.py  test_dispatch_terminal_handoff_integration.py  test_flow_snapshot_restore.py  test_scheduler_integration.py  test_step_flow_integration.py
tests/real/: test_claude_code_provider_real.py
tests/real/agent/: test_codex_per_run_env_real.py  test_codex_provider_real.py  test_codex_rollout_artifacts.py  test_codex_skills_real.py  test_openai_agents_provider_real.py  test_pi_provider_real.py
tests/real/flow/: support.py  test_real_agent_step_submit.py  test_real_dispatch_callback.py  test_real_dispatch_terminal_handoff.py  test_real_scheduler_pause_snapshot.py
tests/unit/: test_import.py
tests/unit/agent/: test_claude_code_home.py  test_claude_code_normalization.py  test_codex_context.py  test_context.py  test_external_takeover_provider.py  test_homes.py  test_instructions.py  test_opencode_provider.py  test_pi_home.py  test_pi_rpc.py  test_pi_session.py  test_provider_capabilities.py  test_provider_models.py  test_provider_registry.py  test_provider_usage.py  test_runtime_pause_controller.py  test_skills.py  test_store.py  test_templates.py  test_trace.py
tests/unit/flow/: test_agent_step.py  test_agent_step_callback.py  test_contexts.py  test_dispatch_callback_patterns.py  test_dispatch_step.py  test_flow_service_advance.py  test_flow_service_start.py  test_flow_service_terminal.py  test_models.py  test_pause_integration.py  test_public_exports.py  test_registry.py  test_rendering.py  test_scheduler.py  (+4 more)
(+62 files in other folders)
