[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runtime-kit"
version = "0.3.0"
description = "A lightweight Python runtime kit for provider-backed agents, scoped persistence, snapshots, and simple orchestration primitives."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic>=2,<3"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest"]
claude = ["claude-agent-sdk==0.2.124"]
openai-agents = [
  "openai-agents==0.18.3",
  "openai==2.46.0",
  "httpx[socks]>=0.27,<1",
]

[project.urls]
Homepage = "https://github.com/xukp20/agent-runtime-kit"
Repository = "https://github.com/xukp20/agent-runtime-kit"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
agent_runtime_kit = ["py.typed", "agent/providers/pi_mcp_bridge.mjs"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "real: tests that require external local services or real CLI/runtime configuration",
  "real_codex: tests that require Codex CLI, Codex SDK, or a usable Codex home",
  "real_codex_artifact: tests that use local real Codex JSONL artifacts under data/",
  "real_claude: tests that require Claude Agent SDK, Claude Code CLI, and usable provider configuration",
  "real_pi: tests that require Pi CLI 0.80.10 and a usable real model profile",
  "real_openai_agents: tests that require OpenAI Agents SDK and a live model endpoint",
  "slow: tests that may take longer than regular unit tests",
]
